# getpdfpro

./: .deploy-marker  .dockerignore  .gitignore  .railway-deploy-marker  README.md  getpdfpro-feasibility-report.md  mkdocs.yml  package-lock.json  package.json  railway.toml  requirements-docs.txt  turbo.json  vercel.json
.github/workflows/: docs.yml  mobile-ci.yml
apps/: wrangler.toml
apps/api/: .env.example  Dockerfile.api  Dockerfile.worker  Procfile  README.md  pyproject.toml  pytest.ini  requirements.txt  start.sh
apps/api/app/: __init__.py  celery_app.py  config.py  main.py
apps/api/app/adapters/: __init__.py  adobe.py  adobe_ops.py  cascade.py  cloudconvert.py  libreoffice.py  local.py
apps/api/app/routers/: ai_tools.py  billing.py  compliance.py  debug.py  extract.py  jobs.py  ocr.py  office.py  organize.py  pdf.py  render.py  repair.py  security.py  watermark.py
apps/api/app/services/: __init__.py  ai.py
apps/api/scripts/: verify_supabase_mfa.py
apps/api/tests/: conftest.py  test_billing_webhook.py  test_cleanup_old_uploads.py
apps/api/tests/scripts/: test_verify_supabase_mfa.py
apps/web/: .env.example  README.md  _headers  _redirects  eslint.config.mjs  next.config.js  open-next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  (+1 more)
docs/: CNAME  adapters.md  cloudflare-pages-deploy.md  deploy.md  seo-indexing.md  supabase-mfa-setup.md
getpdfpro/: .env.example  .gitignore  Makefile  README.md  SECURITY.md  docker-compose.yml
scripts/: generate-social-share.ts  submit-indexnow.ts
(+258 files in other folders)
